# tiny-blog-api

./: db.sqlite3  pyproject.toml
blog/: admin.py  models.py  serializers.py  tests.py  views.py
blog/migrations/: 0001_initial.py
rest_api/: asgi.py  settings.py  urls.py  wsgi.py
